added new layout

--- a/Xamarin.Forms.Controls/PerfPage1.xaml
+++ b/Xamarin.Forms.Controls/PerfPage1.xaml
@@ -11,5 +11,11 @@
             <Label x:Name="lbl" />
             <Label Text="Outro texto" />
         </StackLayout>
+
+        <!--  Grid layout  -->
+        <!--<Grid RowDefinitions="*,*">
+            <Label x:Name="lbl" />
+            <Label Grid.Row="1" Text="Outro texto" />
+        </Grid>-->
     </ContentPage.Content>
 </ContentPage>
