--- a/Xamarin.Forms.Controls/PerfPage1.xaml
+++ b/Xamarin.Forms.Controls/PerfPage1.xaml
@@ -7,12 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <ContentPage.Content>
-        <StackLayout>
+        <!--<StackLayout>
             <Label x:Name="lbl" />
             <Label Text="Outro texto" />
-        </StackLayout>
+        </StackLayout>-->
 
         <!--  Grid layout  -->
+        <Grid RowDefinitions="*,*">
+            <Label x:Name="lbl" />
+            <Label Grid.Row="1" Text="Outro texto" />
+        </Grid>
+
+        <!--  Grid layout with auto  -->
         <!--<Grid RowDefinitions="*,*">
             <Label x:Name="lbl" />
             <Label Grid.Row="1" Text="Outro texto" />
